--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -472,7 +472,7 @@
     <value>Tatsächliche Temperatur</value>
   </data>
   <data name="ESTOP OK" xml:space="preserve">
-    <value>Estop ok</value>
+    <value>halt ok</value>
   </data>
   <data name="DISABLED MODE" xml:space="preserve">
     <value>Deaktivierter Modus</value>
@@ -484,16 +484,16 @@
     <value>Automatischer Modus</value>
   </data>
   <data name="PRODUCTION CYCLE" xml:space="preserve">
-    <value>Produktionszyklus</value>
+    <value>Produktionslinie</value>
   </data>
   <data name="ZONE PREPARED" xml:space="preserve">
-    <value>Vorbereitete Zone</value>
+    <value>Zone vorbereitet</value>
   </data>
   <data name="STOP CYCLE ON" xml:space="preserve">
-    <value>Stoppen Sie den Zyklus</value>
+    <value>Stoppzyklus EIN</value>
   </data>
   <data name="STOP CYCLE PENDING" xml:space="preserve">
-    <value>Stoppen Sie den Zyklus anhängig</value>
+    <value>Stoppzyklus ausstehend</value>
   </data>
   <data name="INFO_SYS_10" xml:space="preserve">
     <value>Zweite. Transf - Überprüfen Sie das elektrische Kabinett und setzen Sie den ausgelösten Trennschalter zurück. Schnitte Qualifiziertes Personal nur autorisiert!</value>
@@ -802,7 +802,7 @@
     <value>Filter ist verschmutzt und muss gereinigt werden (der Wasserstand bleibt zu hoch).</value>
   </data>
   <data name="INFO_RES_1" xml:space="preserve">
-    <value>Sicherheitsthermistor ausgelöst! Überprüfen Sie den Trockner auf mögliche Materialverbläße, Thermoregution, Luftfilter…</value>
+    <value>Sicherheitsthermistor ausgelöst! Überprüfen Sie den Trockner auf mögliche Materialverbläße, Thermoregution, Luftfilter</value>
   </data>
   <data name="INFO_RES_2" xml:space="preserve">
     <value>Starten Sie das Gebläse schnell neu, um zu verhindern, dass das Heizsystem überhitzt</value>
@@ -1015,7 +1015,7 @@
     <value>Bestätigen Sie?</value>
   </data>
   <data name="ESTOP NOT OK" xml:space="preserve">
-    <value>Estop nicht ok</value>
+    <value>Stopp Nicht OK</value>
   </data>
   <data name="INFO_SYS_3" xml:space="preserve">
     <value>Bitte rufen Sie Previero / Sorema Assistance Service an!</value>
@@ -2630,5 +2630,236 @@
   </data>
   <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
     <value>Kritischer Alarm vorhanden (wenn falsch --&gt; kein Prod-Start)</value>
+  </data>
+  <data name="INFO_PRES_10" xml:space="preserve">
+    <value>Prüfen Sie auf eine mögliche Blockierung des Wärmetauschers und die Konfiguration der Setups</value>
+  </data>
+  <data name="INFO_PRES_11" xml:space="preserve">
+    <value>Prüfen Sie auf mögliche Lecks an Wärmetauscher/Rohren und Konfiguration der Setups</value>
+  </data>
+  <data name="INFO_ETHERNET_1" xml:space="preserve">
+    <value>Überprüfen Sie den Ethernet-Switch, seine Versorgung und Anschlüsse</value>
+  </data>
+  <data name="INFO_MIXER_1" xml:space="preserve">
+    <value>Überprüfen Sie den Wasserkreislauf, das Nachfüllventil, die Rohre und die Wasserpumpe. Mögliches Auslaufen oder Wassermangel.</value>
+  </data>
+  <data name="INFO_MIXER_2" xml:space="preserve">
+    <value>Prüfen Sie das Druckventil des Mischers, den Ventilluftdruck und die Druckpumpe auf eine mögliche Blockierung.</value>
+  </data>
+  <data name="INFO_MIXER_3" xml:space="preserve">
+    <value>Überprüfen Sie die Füllung des Mixers und wenden Sie sich an den Online-Support des Herstellers - Der Mixer wird automatisch deaktiviert</value>
+  </data>
+  <data name="INFO_LS_14" xml:space="preserve">
+    <value>Überprüfen Sie die Endschalter der Ventilposition, ihre Position und Verkabelung</value>
+  </data>
+  <data name="INFO_LS_15" xml:space="preserve">
+    <value>Überprüfen Sie die Ventilposition, den Druck in den Leitungen und die Position des Endschalters</value>
+  </data>
+  <data name="INFO_LEVEL_18" xml:space="preserve">
+    <value>Füllstandsparameter im Wasserkreislauf prüfen</value>
+  </data>
+  <data name="INFO_MIXER_4" xml:space="preserve">
+    <value>Auf Mischerüberlastung durch Material oder Mischer-Stromsteuerungseinstellungen prüfen</value>
+  </data>
+  <data name="INFO_SENSOR_READ_1" xml:space="preserve">
+    <value>Überprüfen Sie den Sensor vor Ort und reinigen Sie ihn</value>
+  </data>
+  <data name="INFO_GT_VALVES_1" xml:space="preserve">
+    <value>Schließen Sie mindestens eines der Auslassventile, um ein vollständiges Entleeren des Tanks zu verhindern. Überprüfen Sie die Ventile vor Ort.</value>
+  </data>
+  <data name="INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Der Entladezyklus kann nicht fortgesetzt werden. Überprüfen Sie, ob die Ventilpositions-Ls funktionieren und in der richtigen Position platziert sind und keine Ventilblockierung aufgetreten ist.</value>
+  </data>
+  <data name="INFO_PST_1" xml:space="preserve">
+    <value>Überprüfen Sie die Füllstände der chemischen Zusätze in den Tanks und dem Dosiersystem auf Leckagen oder fehlenden Luftdruck</value>
+  </data>
+  <data name="INFO_PST_2" xml:space="preserve">
+    <value>Überprüfen Sie den Wasserdruck und das Dosiersystem auf ein mögliches Leck oder einen Mangel an Luftdruck</value>
+  </data>
+  <data name="INFO_PST_3" xml:space="preserve">
+    <value>Überprüfen Sie den Schüsselpositionssensor</value>
+  </data>
+  <data name="INFO_PST_4" xml:space="preserve">
+    <value>Überprüfen Sie die Füllstände der chemischen Zusätze in den Tanks, den Wasserdruck und das Dosiersystem auf Lecks oder fehlenden Luftdruck</value>
+  </data>
+  <data name="INFO_INV_3" xml:space="preserve">
+    <value>Auf mechanische Blockierung oder zu starke Belastung des Motors prüfen.</value>
+  </data>
+  <data name="INFO_INV_4" xml:space="preserve">
+    <value>Setzen Sie den Wechselrichter in den Remote-Modus, um jeden weiteren Betrieb von der PC-Station aus zuzulassen.</value>
+  </data>
+  <data name="INFO_INV_5" xml:space="preserve">
+    <value>Auf dem Display des Wechselrichters ist ein Alarm vorhanden. Bitte überprüfen Sie die durchzuführenden Aktionen in Bezug auf das Benutzerhandbuch des Wechselrichters.</value>
+  </data>
+  <data name="INFO_INV_6" xml:space="preserve">
+    <value>Überprüfen Sie die Profinet-Kabelverbindung und die Stromversorgung der Wechselrichter-Kommunikationskarte</value>
+  </data>
+  <data name="INFO_INV_7" xml:space="preserve">
+    <value>Überprüfen Sie den Wechselrichterstatus im Schrank</value>
+  </data>
+  <data name="INFO_TEMPER_12" xml:space="preserve">
+    <value>Getriebe ist überhitzt: Kühlsystem prüfen. Wenn die Temperatur wieder ansteigt, wird der Hauptmotor gestoppt.</value>
+  </data>
+  <data name="INFO_TEMPER_13" xml:space="preserve">
+    <value>Getriebe ist stark überhitzt. Hauptmotor ist gestoppt. Überprüfen Sie das gesamte Getriebe, seine Kühlung und führen Sie die erforderlichen Wartungsarbeiten durch.</value>
+  </data>
+  <data name="INFO_PRES_12" xml:space="preserve">
+    <value>Einlassdampfsystem prüfen – Druck ist zu hoch – Druckschwankungen können zu Störungen der Wärmeregulierung führen</value>
+  </data>
+  <data name="INFO_PRES_13" xml:space="preserve">
+    <value>Einlassdampfsystem prüfen – Druck ist zu niedrig – Druckschwankungen können zu Störungen der Wärmeregulierung führen</value>
+  </data>
+  <data name="_ESTOP_OK" xml:space="preserve">
+    <value>Hör auf Ok</value>
+  </data>
+  <data name="_DISABLED_MODE" xml:space="preserve">
+    <value>Deaktivierter Modus</value>
+  </data>
+  <data name="_MAINTENANCE_MODE" xml:space="preserve">
+    <value>Wartungsmodus</value>
+  </data>
+  <data name="_AUTOMATIC_MODE" xml:space="preserve">
+    <value>Automatischer Modus</value>
+  </data>
+  <data name="_PRODUCTION_CYCLE" xml:space="preserve">
+    <value>Produktionszyklus</value>
+  </data>
+  <data name="_ZONE_PREPARED" xml:space="preserve">
+    <value>Zone vorbereitet</value>
+  </data>
+  <data name="_STOP_CYCLE_ON" xml:space="preserve">
+    <value>Zyklus stoppen</value>
+  </data>
+  <data name="_STOP_CYCLE_PENDING" xml:space="preserve">
+    <value>Stoppzyklus ausstehend</value>
+  </data>
+  <data name="_ESTOP_NOT_OK" xml:space="preserve">
+    <value>Stopp nicht ok</value>
+  </data>
+  <data name="_PREPARED" xml:space="preserve">
+    <value>Bereit</value>
+  </data>
+  <data name="_PROD_CYCLE_PENDING" xml:space="preserve">
+    <value>Produktionszyklus ausstehend</value>
+  </data>
+  <data name="UserManagement" xml:space="preserve">
+    <value>Benutzerverwaltung</value>
+  </data>
+  <data name="ResetFaults" xml:space="preserve">
+    <value>Fehler zurücksetzen</value>
+  </data>
+  <data name="OperatingSystemAccess" xml:space="preserve">
+    <value>Betriebssystemzugriff</value>
+  </data>
+  <data name="InfoPanel" xml:space="preserve">
+    <value>Info-Panel</value>
+  </data>
+  <data name="TrendLogs" xml:space="preserve">
+    <value>Trendseite</value>
+  </data>
+  <data name="TrendExport" xml:space="preserve">
+    <value>Trend-Export</value>
+  </data>
+  <data name="EventLogs" xml:space="preserve">
+    <value>Ereignisse protokolliert</value>
+  </data>
+  <data name="CyclesPanel" xml:space="preserve">
+    <value>Zyklen-Panel</value>
+  </data>
+  <data name="SignalsPanel" xml:space="preserve">
+    <value>Signaltafel</value>
+  </data>
+  <data name="ParameterManagement" xml:space="preserve">
+    <value>Parameterverwaltungsseite</value>
+  </data>
+  <data name="PlcPage" xml:space="preserve">
+    <value>SPS-Rack-Seite</value>
+  </data>
+  <data name="ElectricalDrawing" xml:space="preserve">
+    <value>Elektronische Zeichnung</value>
+  </data>
+  <data name="PlantOverview" xml:space="preserve">
+    <value>Anlagenübersicht</value>
+  </data>
+  <data name="DATA" xml:space="preserve">
+    <value>Daten</value>
+  </data>
+  <data name="_LD" xml:space="preserve">
+    <value>Lokale Trennung</value>
+  </data>
+  <data name="_NOT_OK" xml:space="preserve">
+    <value>Nicht ok</value>
+  </data>
+  <data name="_ALARM_CRITICAL" xml:space="preserve">
+    <value>Kritischer Alarm</value>
+  </data>
+  <data name="_START_DISABLED" xml:space="preserve">
+    <value>Start deaktiviert</value>
+  </data>
+  <data name="_READY" xml:space="preserve">
+    <value>Bereit</value>
+  </data>
+  <data name="_MESSAGE" xml:space="preserve">
+    <value>Nachricht</value>
+  </data>
+  <data name="_NEW_ALARM" xml:space="preserve">
+    <value>Neuer Wecker</value>
+  </data>
+  <data name="_CMD_ON" xml:space="preserve">
+    <value>Befehl EIN</value>
+  </data>
+  <data name="_RUNNING" xml:space="preserve">
+    <value>Betrieb</value>
+  </data>
+  <data name="_ALARM_NON_CRITICAL" xml:space="preserve">
+    <value>Nicht kritischer Alarm</value>
+  </data>
+  <data name="INTERLOCKS" xml:space="preserve">
+    <value>Verriegelungen</value>
+  </data>
+  <data name="PLANT OVERVIEW" xml:space="preserve">
+    <value>Anlagenansicht</value>
+  </data>
+  <data name="NOW" xml:space="preserve">
+    <value>Jetzt</value>
+  </data>
+  <data name="CYCLES" xml:space="preserve">
+    <value>Fahrräder</value>
+  </data>
+  <data name="OPEN" xml:space="preserve">
+    <value>Offen</value>
+  </data>
+  <data name="CYCLE STEPS" xml:space="preserve">
+    <value>Zyklusschritte</value>
+  </data>
+  <data name="MISSING SYNOPTIC" xml:space="preserve">
+    <value>Fehlende Synoptik</value>
+  </data>
+  <data name="NO DATA" xml:space="preserve">
+    <value>Keine Daten</value>
+  </data>
+  <data name="WASHING TANK OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Waschtank über Mindesttemperatur</value>
+  </data>
+  <data name="TIME_CYCLE" xml:space="preserve">
+    <value>Zeitzyklus</value>
+  </data>
+  <data name="FIELD_ADJUST" xml:space="preserve">
+    <value>Feldanpassung</value>
+  </data>
+  <data name="TO EXTERNAL" xml:space="preserve">
+    <value>Nach Extern</value>
+  </data>
+  <data name="TO BAG" xml:space="preserve">
+    <value>Eintüten</value>
+  </data>
+  <data name="RELEASE" xml:space="preserve">
+    <value>Veröffentlichung</value>
+  </data>
+  <data name="LOCK" xml:space="preserve">
+    <value>Sperren</value>
+  </data>
+  <data name="TREND PAGE" xml:space="preserve">
+    <value>Trendseite</value>
   </data>
 </root>
