--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -826,7 +826,7 @@
     <value>המסנן מלוכלך ויש צורך לנקות אותו (מפלס המים נשאר גבוה מדי).</value>
   </data>
   <data name="INFO_RES_1" xml:space="preserve">
-    <value>תרמיסטור בטיחות הוכש! בדוק את המייבש עבור כל חסימת חומר אפשרית, הגנה תרמית, מסנן אוויר …</value>
+    <value>תרמיסטור בטיחות הוכש! בדוק את המייבש עבור כל חסימת חומר אפשרית, הגנה תרמית, מסנן אוויר</value>
   </data>
   <data name="INFO_RES_2" xml:space="preserve">
     <value>הפעל מחדש את המפוח במהירות כדי למנוע התחממות יתר של מערכת החימום</value>
@@ -1113,7 +1113,7 @@
   <data name="_NEW_ALARM" xml:space="preserve">
     <value>אזעקה חדשה</value>
   </data>
-  <data name="PLANT VIEW" xml:space="preserve">
+  <data name="PLANT OVERVIEW" xml:space="preserve">
     <value>נוף צמח</value>
   </data>
   <data name="PRODUCTION CYCLE" xml:space="preserve">
@@ -2744,5 +2744,122 @@
   </data>
   <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
     <value>אזעקה קריטית קיימת (אם כוזב --&gt; אין התחלת פרוד)</value>
+  </data>
+  <data name="INFO_PRES_10" xml:space="preserve">
+    <value>בדוק אם יש חסימה אפשרית של מחליף חום ותצורה של הגדרות</value>
+  </data>
+  <data name="INFO_PRES_11" xml:space="preserve">
+    <value>בדוק אם יש דליפה אפשרית של מחליף חום/צינורות ותצורה של הגדרות</value>
+  </data>
+  <data name="INFO_ETHERNET_1" xml:space="preserve">
+    <value>בדוק את מתג ה-Ethernet, את האספקה ​​והחיבורים שלו</value>
+  </data>
+  <data name="INFO_MIXER_1" xml:space="preserve">
+    <value>בדוק מעגל מים, שסתום מילוי מחדש, צינורות ומשאבת מים. דליפה אפשרית או חוסר מים.</value>
+  </data>
+  <data name="INFO_MIXER_2" xml:space="preserve">
+    <value>בדוק אם יש חסימה אפשרית בשסתום הפריקה של המיקסר, לחץ האוויר של השסתום ומשאבת הפריקה.</value>
+  </data>
+  <data name="INFO_MIXER_3" xml:space="preserve">
+    <value>בדוק את מילוי המיקסר וצור קשר עם הסיוע המקוון של היצרן - המיקסר מושבת באופן אוטומטי</value>
+  </data>
+  <data name="INFO_LS_14" xml:space="preserve">
+    <value>בדוק את מתגי הגבול של מיקום השסתום, מיקומם והחיווט שלהם</value>
+  </data>
+  <data name="INFO_LS_15" xml:space="preserve">
+    <value>בדוק את מיקום השסתום, את הלחץ בצינורות ואת מיקום מתג הגבול</value>
+  </data>
+  <data name="INFO_LEVEL_18" xml:space="preserve">
+    <value>בדוק פרמטר רמות במעגל לולאת המים</value>
+  </data>
+  <data name="INFO_MIXER_4" xml:space="preserve">
+    <value>בדוק אם יש עומס יתר במיקסר של חומר או הגדרות בקרה הנוכחית של המיקסר</value>
+  </data>
+  <data name="INFO_SENSOR_READ_1" xml:space="preserve">
+    <value>בדוק את החיישן בשטח ונקה אותו</value>
+  </data>
+  <data name="INFO_GT_VALVES_1" xml:space="preserve">
+    <value>סגור לפחות אחד משסתומי הפריקה כדי למנוע התרוקנות מלאה של המיכל. בדוק את השסתומים בשטח.</value>
+  </data>
+  <data name="INFO_GT_VALVES_2" xml:space="preserve">
+    <value>מחזור פריקה לא יכול להימשך. בדוק את מיקום השסתום Ls פועל וממוקם במיקום הנכון ולא התרחשה חסימת שסתום.</value>
+  </data>
+  <data name="INFO_PST_1" xml:space="preserve">
+    <value>בדוק את רמות התוספים הכימיים במיכלים ובמערכת המינון לאיתור דליפה או חוסר לחץ אוויר</value>
+  </data>
+  <data name="INFO_PST_2" xml:space="preserve">
+    <value>בדוק את לחץ המים ואת מערכת המינון עבור דליפה אפשרית או חוסר לחץ אוויר</value>
+  </data>
+  <data name="INFO_PST_3" xml:space="preserve">
+    <value>בדוק את חיישן מיקום הקערה</value>
+  </data>
+  <data name="INFO_PST_4" xml:space="preserve">
+    <value>בדוק את רמות התוספים הכימיים במיכלים, לחץ המים ומערכת המינון לאיתור דליפה או חוסר לחץ אוויר</value>
+  </data>
+  <data name="INFO_INV_3" xml:space="preserve">
+    <value>בדוק אם התרחש סתימה מכנית או עומס כבד רב מדי על המנוע.</value>
+  </data>
+  <data name="INFO_INV_4" xml:space="preserve">
+    <value>הגדר את המהפך במצב מרחוק כדי לאפשר כל פעולה נוספת עליו מתחנת PC.</value>
+  </data>
+  <data name="INFO_INV_5" xml:space="preserve">
+    <value>אזעקה קיימת בתצוגת מהפך. אנא בדוק את הפעולות שיש לבצע בהתייחס למדריך למשתמש של המהפך.</value>
+  </data>
+  <data name="INFO_INV_6" xml:space="preserve">
+    <value>בדוק את חיבור כבל Profinet ואת ספק הכוח של כרטיס תקשורת מהפך</value>
+  </data>
+  <data name="INFO_INV_7" xml:space="preserve">
+    <value>בדוק את מצב המהפך בארון</value>
+  </data>
+  <data name="INFO_TEMPER_12" xml:space="preserve">
+    <value>תיבת ההילוכים מחוממת יתר על המידה: בדוק את מערכת הקירור. אם הטמפרטורה תעלה שוב, המנוע הראשי יופסק.</value>
+  </data>
+  <data name="INFO_TEMPER_13" xml:space="preserve">
+    <value>תיבת ההילוכים מחוממת יתר על המידה. המנוע הראשי נעצר. בדוק את כל תיבת ההילוכים, את הקירור שלה, ועשה את התחזוקה הדרושה.</value>
+  </data>
+  <data name="INFO_PRES_12" xml:space="preserve">
+    <value>בדוק את מערכת הקיטור בכניסה - הלחץ גבוה מדי - תנודות הלחץ עלולות לגרום למחלה על ויסות תרמית</value>
+  </data>
+  <data name="INFO_PRES_13" xml:space="preserve">
+    <value>בדוק את מערכת הקיטור בכניסה - הלחץ נמוך מדי - תנודות הלחץ עלולות לגרום למחלה על ויסות תרמי</value>
+  </data>
+  <data name="UserManagement" xml:space="preserve">
+    <value>ניהול משתמשים</value>
+  </data>
+  <data name="ResetFaults" xml:space="preserve">
+    <value>אפס תקלות</value>
+  </data>
+  <data name="OperatingSystemAccess" xml:space="preserve">
+    <value>גישה למערכת הפעלה</value>
+  </data>
+  <data name="InfoPanel" xml:space="preserve">
+    <value>לוח מידע</value>
+  </data>
+  <data name="TrendLogs" xml:space="preserve">
+    <value>עמוד מגמות</value>
+  </data>
+  <data name="TrendExport" xml:space="preserve">
+    <value>ייצוא מגמות</value>
+  </data>
+  <data name="EventLogs" xml:space="preserve">
+    <value>אירועים מתועדים</value>
+  </data>
+  <data name="CyclesPanel" xml:space="preserve">
+    <value>לוח מחזורים</value>
+  </data>
+  <data name="SignalsPanel" xml:space="preserve">
+    <value>לוח אותות</value>
+  </data>
+  <data name="ParameterManagement" xml:space="preserve">
+    <value>דף ניהול פרמטרים</value>
+  </data>
+  <data name="PlcPage" xml:space="preserve">
+    <value>PLC Rack Page</value>
+  </data>
+  <data name="ElectricalDrawing" xml:space="preserve">
+    <value>שרטוט חשמלי</value>
+  </data>
+  <data name="PlantOverview" xml:space="preserve">
+    <value>סקירת צמח</value>
   </data>
 </root>
