--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -472,7 +472,7 @@
     <value>实际温度</value>
   </data>
   <data name="ESTOP OK" xml:space="preserve">
-    <value>exop好的</value>
+    <value>急停OK</value>
   </data>
   <data name="DISABLED MODE" xml:space="preserve">
     <value>禁用模式</value>
@@ -484,16 +484,16 @@
     <value>自动模式</value>
   </data>
   <data name="PRODUCTION CYCLE" xml:space="preserve">
-    <value>生产周期</value>
+    <value>生产线</value>
   </data>
   <data name="ZONE PREPARED" xml:space="preserve">
-    <value>准备的区域</value>
+    <value>准备区</value>
   </data>
   <data name="STOP CYCLE ON" xml:space="preserve">
-    <value>停止周期</value>
+    <value>停止循环</value>
   </data>
   <data name="STOP CYCLE PENDING" xml:space="preserve">
-    <value>停止周期待定</value>
+    <value>停止循环挂起</value>
   </data>
   <data name="INFO_SYS_3" xml:space="preserve">
     <value>请致电Previaro / Sorema援助服务！</value>
@@ -823,7 +823,7 @@
     <value>过滤器脏污，需要清洁（水位仍然太高）。</value>
   </data>
   <data name="INFO_RES_1" xml:space="preserve">
-    <value>安全热敏电阻绊倒！检查烘干机是否有任何可能的材料堵塞，温度，空气过滤器...</value>
+    <value>安全热敏电阻绊倒！检查烘干机是否有任何可能的材料堵塞，温度，空气过滤器</value>
   </data>
   <data name="INFO_RES_2" xml:space="preserve">
     <value>快速重启鼓风机以防止加热系统过热</value>
@@ -1036,7 +1036,7 @@
     <value>你确认了吗？</value>
   </data>
   <data name="ESTOP NOT OK" xml:space="preserve">
-    <value>estop不正常</value>
+    <value>急停不行</value>
   </data>
   <data name="DETAILS" xml:space="preserve">
     <value>细节</value>
@@ -1051,10 +1051,10 @@
     <value>保存全部</value>
   </data>
   <data name="ELECTRICAL DRAWING" xml:space="preserve">
-    <value>电气图纸</value>
+    <value>电气制图</value>
   </data>
   <data name="LOADING" xml:space="preserve">
-    <value>正在加载</value>
+    <value>加载中</value>
   </data>
   <data name="PROGRESS" xml:space="preserve">
     <value>进步</value>
@@ -1096,7 +1096,7 @@
     <value>正常状态</value>
   </data>
   <data name="EL. DRAWING" xml:space="preserve">
-    <value>埃尔。绘画</value>
+    <value>埃尔。 绘画</value>
   </data>
   <data name="MOTOR TEMPERATURE" xml:space="preserve">
     <value>电机温度</value>
@@ -2630,5 +2630,236 @@
   </data>
   <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
     <value>存在严重警报（如果 False --&gt; 无 Prod 启动）</value>
+  </data>
+  <data name="INFO_PRES_10" xml:space="preserve">
+    <value>检查热交换器是否可能堵塞和设置配置</value>
+  </data>
+  <data name="INFO_PRES_11" xml:space="preserve">
+    <value>检查热交换器/管道是否可能泄漏以及设置配置</value>
+  </data>
+  <data name="INFO_ETHERNET_1" xml:space="preserve">
+    <value>检查以太网交换机及其电源和连接</value>
+  </data>
+  <data name="INFO_MIXER_1" xml:space="preserve">
+    <value>检查水路、注水阀、管道和水泵。可能漏水或缺水。</value>
+  </data>
+  <data name="INFO_MIXER_2" xml:space="preserve">
+    <value>检查混合器的排放阀、阀空气压力和排放泵是否可能堵塞。</value>
+  </data>
+  <data name="INFO_MIXER_3" xml:space="preserve">
+    <value>检查混合器填充并联系制造商的在线帮助 - 混合器自动禁用</value>
+  </data>
+  <data name="INFO_LS_14" xml:space="preserve">
+    <value>检查阀位限位开关及其位置和接线</value>
+  </data>
+  <data name="INFO_LS_15" xml:space="preserve">
+    <value>检查阀门位置、管道压力和限位开关位置</value>
+  </data>
+  <data name="INFO_LEVEL_18" xml:space="preserve">
+    <value>检查水循环电路中的液位参数</value>
+  </data>
+  <data name="INFO_MIXER_4" xml:space="preserve">
+    <value>检查混合器材料过载或混合器电流控制设置</value>
+  </data>
+  <data name="INFO_SENSOR_READ_1" xml:space="preserve">
+    <value>现场检查传感器并清洁</value>
+  </data>
+  <data name="INFO_GT_VALVES_1" xml:space="preserve">
+    <value>关闭至少一个排放阀以防止罐完全排空。检查现场的阀门。</value>
+  </data>
+  <data name="INFO_GT_VALVES_2" xml:space="preserve">
+    <value>放电循环无法继续。检查阀位Ls是否工作并放置在正确的位置，没有发生阀门堵塞。</value>
+  </data>
+  <data name="INFO_PST_1" xml:space="preserve">
+    <value>检查储罐和加药系统中化学添加剂的液位是否有泄漏或气压不足</value>
+  </data>
+  <data name="INFO_PST_2" xml:space="preserve">
+    <value>检查水压和加药系统是否存在泄漏或气压不足</value>
+  </data>
+  <data name="INFO_PST_3" xml:space="preserve">
+    <value>检查碗位置传感器</value>
+  </data>
+  <data name="INFO_PST_4" xml:space="preserve">
+    <value>检查水箱中化学添加剂的液位、水压和加药系统是否有泄漏或气压不足</value>
+  </data>
+  <data name="INFO_INV_3" xml:space="preserve">
+    <value>检查电机是否出现机械堵塞或负载过大。</value>
+  </data>
+  <data name="INFO_INV_4" xml:space="preserve">
+    <value>将逆变器设置为远程模式，以允许从 PC 站对其进行任何进一步操作。</value>
+  </data>
+  <data name="INFO_INV_5" xml:space="preserve">
+    <value>逆变器显示屏上出现警报。请参考逆变器用户手册检查需要完成的操作。</value>
+  </data>
+  <data name="INFO_INV_6" xml:space="preserve">
+    <value>检查 Profinet 电缆连接和逆变器通信卡的电源</value>
+  </data>
+  <data name="INFO_INV_7" xml:space="preserve">
+    <value>检查机柜中的逆变器状态</value>
+  </data>
+  <data name="INFO_TEMPER_12" xml:space="preserve">
+    <value>变速箱过热：检查冷却系统。如果温度再次升高，主电机将停止。</value>
+  </data>
+  <data name="INFO_TEMPER_13" xml:space="preserve">
+    <value>变速箱严重过热。主电机停止。检查整个变速箱及其冷却，并进行必要的维护。</value>
+  </data>
+  <data name="INFO_PRES_12" xml:space="preserve">
+    <value>检查入口蒸汽系统 - 压力过高 - 压力波动可能导致热调节失调</value>
+  </data>
+  <data name="INFO_PRES_13" xml:space="preserve">
+    <value>检查入口蒸汽系统 - 压力太低 - 压力波动可能导致热调节失调</value>
+  </data>
+  <data name="_ESTOP_OK" xml:space="preserve">
+    <value>急停确定</value>
+  </data>
+  <data name="_DISABLED_MODE" xml:space="preserve">
+    <value>禁用模式</value>
+  </data>
+  <data name="_MAINTENANCE_MODE" xml:space="preserve">
+    <value>维护模式</value>
+  </data>
+  <data name="_AUTOMATIC_MODE" xml:space="preserve">
+    <value>自动模式</value>
+  </data>
+  <data name="_PRODUCTION_CYCLE" xml:space="preserve">
+    <value>生产周期</value>
+  </data>
+  <data name="_ZONE_PREPARED" xml:space="preserve">
+    <value>准备区</value>
+  </data>
+  <data name="_STOP_CYCLE_ON" xml:space="preserve">
+    <value>停止循环</value>
+  </data>
+  <data name="_STOP_CYCLE_PENDING" xml:space="preserve">
+    <value>停止循环挂起</value>
+  </data>
+  <data name="_ESTOP_NOT_OK" xml:space="preserve">
+    <value>急停不行</value>
+  </data>
+  <data name="_PREPARED" xml:space="preserve">
+    <value>准备好的</value>
+  </data>
+  <data name="_PROD_CYCLE_PENDING" xml:space="preserve">
+    <value>生产周期待定</value>
+  </data>
+  <data name="UserManagement" xml:space="preserve">
+    <value>用户管理</value>
+  </data>
+  <data name="ResetFaults" xml:space="preserve">
+    <value>复位故障</value>
+  </data>
+  <data name="OperatingSystemAccess" xml:space="preserve">
+    <value>操作系统访问</value>
+  </data>
+  <data name="InfoPanel" xml:space="preserve">
+    <value>信息面板</value>
+  </data>
+  <data name="TrendLogs" xml:space="preserve">
+    <value>趋势页面</value>
+  </data>
+  <data name="TrendExport" xml:space="preserve">
+    <value>趋势出口</value>
+  </data>
+  <data name="EventLogs" xml:space="preserve">
+    <value>事件记录</value>
+  </data>
+  <data name="CyclesPanel" xml:space="preserve">
+    <value>循环面板</value>
+  </data>
+  <data name="SignalsPanel" xml:space="preserve">
+    <value>信号面板</value>
+  </data>
+  <data name="ParameterManagement" xml:space="preserve">
+    <value>参数管理页面</value>
+  </data>
+  <data name="PlcPage" xml:space="preserve">
+    <value>PLC 机架页面</value>
+  </data>
+  <data name="ElectricalDrawing" xml:space="preserve">
+    <value>电气制图</value>
+  </data>
+  <data name="PlantOverview" xml:space="preserve">
+    <value>工厂概况</value>
+  </data>
+  <data name="DATA" xml:space="preserve">
+    <value>数据</value>
+  </data>
+  <data name="_LD" xml:space="preserve">
+    <value>本地断开</value>
+  </data>
+  <data name="_NOT_OK" xml:space="preserve">
+    <value>不好</value>
+  </data>
+  <data name="_ALARM_CRITICAL" xml:space="preserve">
+    <value>紧急警报</value>
+  </data>
+  <data name="_START_DISABLED" xml:space="preserve">
+    <value>启动禁用</value>
+  </data>
+  <data name="_READY" xml:space="preserve">
+    <value>准备好</value>
+  </data>
+  <data name="_MESSAGE" xml:space="preserve">
+    <value>信息</value>
+  </data>
+  <data name="_NEW_ALARM" xml:space="preserve">
+    <value>新闹钟</value>
+  </data>
+  <data name="_CMD_ON" xml:space="preserve">
+    <value>命令开启</value>
+  </data>
+  <data name="_RUNNING" xml:space="preserve">
+    <value>跑步</value>
+  </data>
+  <data name="_ALARM_NON_CRITICAL" xml:space="preserve">
+    <value>非严重警报</value>
+  </data>
+  <data name="INTERLOCKS" xml:space="preserve">
+    <value>互锁</value>
+  </data>
+  <data name="PLANT OVERVIEW" xml:space="preserve">
+    <value>厂景</value>
+  </data>
+  <data name="NOW" xml:space="preserve">
+    <value>现在</value>
+  </data>
+  <data name="CYCLES" xml:space="preserve">
+    <value>周期</value>
+  </data>
+  <data name="OPEN" xml:space="preserve">
+    <value>打开</value>
+  </data>
+  <data name="CYCLE STEPS" xml:space="preserve">
+    <value>循环步骤</value>
+  </data>
+  <data name="MISSING SYNOPTIC" xml:space="preserve">
+    <value>缺少天气</value>
+  </data>
+  <data name="NO DATA" xml:space="preserve">
+    <value>没有数据</value>
+  </data>
+  <data name="WASHING TANK OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>洗涤槽超过最低温度</value>
+  </data>
+  <data name="TIME_CYCLE" xml:space="preserve">
+    <value>时间周期</value>
+  </data>
+  <data name="FIELD_ADJUST" xml:space="preserve">
+    <value>现场调整</value>
+  </data>
+  <data name="TO EXTERNAL" xml:space="preserve">
+    <value>对外</value>
+  </data>
+  <data name="TO BAG" xml:space="preserve">
+    <value>袋</value>
+  </data>
+  <data name="RELEASE" xml:space="preserve">
+    <value>发布</value>
+  </data>
+  <data name="LOCK" xml:space="preserve">
+    <value>锁</value>
+  </data>
+  <data name="TREND PAGE" xml:space="preserve">
+    <value>趋势页面</value>
   </data>
 </root>
